# linx

./: .gitignore  Cargo.toml  LICENSE  README.md  slumber.yml
migrations/: 20260130003326_create_link.sql
src/: error.rs  lib.rs  main.rs  response.rs
tests/: redirect.rs  shorten.rs
