[package]
name = "linx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
rand = "0.8"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
